force-app/main/default/objects/Test_Script__c/Test_Script__c.object-meta.xml
<CustomObject>
    <label>Test Script</label>
    <nameField>
        <displayFormat>TS-{00000}</displayFormat>
        <label>Test Script No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scripts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>