force-app/main/default/objects/Test_Script__c/fields/Predecessor_Test_Script__c.field-meta.xml
<CustomField>
    <fullName>Predecessor_Test_Script__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Predecessor Test Script</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Test_Script__c.Test_Group__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Test_Group__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Test_Script__c</referenceTo>
    <relationshipLabel>Successor Test Scripts</relationshipLabel>
    <relationshipName>Test_Script</relationshipName>
    <type>Lookup</type>
</CustomField>