force-app/main/default/objects/Test_Script__c/fields/Preparation__c.field-meta.xml
<CustomField>
    <fullName>Preparation__c</fullName>
    <label>Preparation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>