force-app/main/default/objects/Test_Script__c/fields/Test_Group__c.field-meta.xml
<CustomField>
    <fullName>Test_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Group</label>
    <referenceTo>Test_Group__c</referenceTo>
    <relationshipLabel>Test Scripts</relationshipLabel>
    <relationshipName>Test_Scripts</relationshipName>
    <type>Lookup</type>
</CustomField>