force-app/main/default/objects/Test_Script__c/listViews/ABH_Tests_to_Validate_Non_Safari.listView-meta.xml
<ListView>
    <fullName>ABH_Tests_to_Validate_Non_Safari</fullName>
    <columns>NAME</columns>
    <columns>Predecessor_Test_Script__c</columns>
    <columns>Description__c</columns>
    <columns>Environment__c</columns>
    <columns>Test_Group__c</columns>
    <columns>Status__c</columns>
    <columns>Browser__c</columns>
    <columns>Test_Case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Test_Group__c</field>
        <operation>contains</operation>
        <value>ABH</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ready For Validation</value>
    </filters>
    <label>ABH Tests to Validate (Non-Safari)</label>
</ListView>