force-app/main/default/objects/Test_Script__c/listViews/Blank_Project.listView-meta.xml
<ListView>
    <fullName>Blank_Project</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Browser__c</columns>
    <columns>Environment__c</columns>
    <columns>Test_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
    </filters>
    <label>Blank Project</label>
</ListView>