force-app/main/default/objects/Test_Script__c/listViews/Blocked_Parks_Tests.listView-meta.xml
<ListView>
    <fullName>Blocked_Parks_Tests</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Preparation__c</columns>
    <columns>Predecessor_Test_Script__c</columns>
    <columns>Browser__c</columns>
    <columns>Environment__c</columns>
    <columns>Test_Group__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Environment__c</field>
        <operation>contains</operation>
        <value>Parks</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Blocked</value>
    </filters>
    <label>Blocked Parks Tests</label>
</ListView>