force-app/main/default/objects/Test_Script__c/listViews/DATG_Test_Scenarios.listView-meta.xml
<ListView>
    <fullName>DATG_Test_Scenarios</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Browser__c</columns>
    <columns>Environment__c</columns>
    <columns>Test_Group__c</columns>
    <columns>Test_Case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Environment__c</field>
        <operation>contains</operation>
        <value>DATG</value>
    </filters>
    <label>DATG Test Scenarios</label>
</ListView>