force-app/main/default/objects/Test_Script__c/listViews/Demo_Tests.listView-meta.xml
<ListView>
    <fullName>Demo_Tests</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Browser__c</columns>
    <columns>Environment__c</columns>
    <columns>Test_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Environment__c</field>
        <operation>contains</operation>
        <value>Demo</value>
    </filters>
    <label>Demo Tests</label>
</ListView>