force-app/main/default/objects/Test_Script__c/listViews/DSI_Tests_to_Validate_Non_Safari.listView-meta.xml
<ListView>
    <fullName>DSI_Tests_to_Validate_Non_Safari</fullName>
    <columns>NAME</columns>
    <columns>Predecessor_Test_Script__c</columns>
    <columns>Description__c</columns>
    <columns>Environment__c</columns>
    <columns>Test_Group__c</columns>
    <columns>Status__c</columns>
    <columns>Browser__c</columns>
    <columns>Test_Case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Environment__c</field>
        <operation>contains</operation>
        <value>DSI</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ready For Validation</value>
    </filters>
    <filters>
        <field>Browser__c</field>
        <operation>notEqual</operation>
        <value>Safari</value>
    </filters>
    <label>DSI Tests to Validate (Non-Safari)</label>
</ListView>