force-app/main/default/objects/Test_Script__c/listViews/DSI_UAT_Tests.listView-meta.xml
<ListView>
    <fullName>DSI_UAT_Tests</fullName>
    <columns>Test_Case__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Environment__c</columns>
    <columns>Test_Group__c</columns>
    <columns>Browser__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Environment__c</field>
        <operation>equals</operation>
        <value>DSI UAT</value>
    </filters>
    <label>DSI UAT Tests</label>
</ListView>