force-app/main/default/objects/Test_Script__c/listViews/Golden_Build_Tests.listView-meta.xml
<ListView>
    <fullName>Golden_Build_Tests</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Environment__c</columns>
    <columns>Browser__c</columns>
    <columns>Test_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>Golden Build Tests</label>
</ListView>